@@ -1,1 +1,1 @@
-W:  8: Catch "Exception"
+W:  8: Catching too general exception Exception
